Finished TreeNodes Started reading Journal

--- a/AximTradeTest/appsettings.Development.json
+++ b/AximTradeTest/appsettings.Development.json
@@ -2,8 +2,22 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.MariaDB"
+    ],
+    "MinimumLevel": {
+      "Default": "Error"
+    },
+    "WriteTo": [
+      {
+        "Name": "MariaDB",
+        "Args": { }
+      }
+    ]
   },
   "ConnectionStrings": {
     "AximTradeTestConnectionString": "server=localhost; port=3306; database=axim_trade_test; user=axim_trade_user; password=9h$>A^x=fwfdtLW!; Persist Security Info=False; Connect Timeout=300"
