--- a/AximTradeTest/appsettings.json
+++ b/AximTradeTest/appsettings.json
@@ -1,9 +1,23 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Error",
+      "Microsoft.AspNetCore": "Error"
     }
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.MariaDB"
+    ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "MariaDB",
+        "Args": {}
+      }
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
